--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.12.52",
+    "@react-native-firebase/app": "^18.1.0",
+    "@react-native-firebase/auth": "^18.1.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "axios": "^1.4.0",
-    "expo": "^48.0.7",
-    "expo-constants": "~14.2.1",
+    "expo": "^49.0.2",
+    "expo-auth-session": "^5.0.2",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.5",
     "expo-font": "^11.1.1",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.2.0",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.2",
+    "expo-linking": "^5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-splash-screen": "^0.20.4",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.9",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.72.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
